<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp">

        <TableRow
            android:background="@color/teal_200">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col2"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/col3"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1sno"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1name"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView/>

            <Button
                android:id="@+id/Idly"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:onClick="sendMessage1"
                android:padding="10sp"
                android:text="@string/row1order"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck"></Button>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2sno"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2name"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView/>

            <Button
                android:id="@+id/Dosa"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:onClick="sendMessage2"
                android:padding="10sp"
                android:text="@string/row1order"
                android:textSize="12sp"></Button>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row3sno"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row3name"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView/>

            <Button
                android:id="@+id/Poori"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:onClick="sendMessage3"
                android:padding="10sp"
                android:text="@string/row1order"
                android:textSize="12sp"></Button>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row4sno"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row4name"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView/>

            <Button
                android:id="@+id/Chapatti"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:onClick="sendMessage4"
                android:padding="10sp"
                android:text="@string/row1order"
                android:textSize="12sp"></Button>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row5sno"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row5name"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView/>

            <Button
                android:id="@+id/Rice"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:onClick="sendMessage5"
                android:padding="10sp"
                android:text="@string/row1order"
                android:textSize="12sp"></Button>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row6sno"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row6name"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView/>

            <Button
                android:id="@+id/Roti"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:onClick="sendMessage6"
                android:padding="10sp"
                android:text="@string/row1order"
                android:textSize="12sp"></Button>

        </TableRow>

    </TableLayout>

</RelativeLayout>